index widget button mobile width fix

--- a/style.css
+++ b/style.css
@@ -715,6 +715,7 @@ button:active{
 
             .read-more{
                 font-size: 1.5vmax!important;
+                width: 13vmax!important;
             }
         }
 
